<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HeadHunter</string>
    <string name="action_settings">Настройки</string>
    <!--важный комментарий для Коммита-->
    <!--то что ниже для HelloScreen-->
    <string name="hello_screen_topic">Выберите желаемый тип аккаунта</string>
    <string name="hello_screen_desc">Вы можете выбрать одно из двух - либо стать соискателем, либо приступить к поиску кадров
         в роли работодателя.\n\n<b>Соискатель</b> должен заполнить свой профиль, указав все необходимые данные и ожидать 
         оповещения о возможных вариантах работы.\n<b>Работодателю</b> даётся возможность просмотра всех кандидатов, после выбора подходящего, Вы
         можете связаться с ним по email либо позвонить по телефону.
         </string>
    <string name="candidate">Соискатель</string>
    <string name="employer">Работодатель</string>
    
    
	<!--то что ниже для Candidate-->
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="essay">Очистить поля</string>
    <string name="form">Анкета</string>
    <string name="resume">Ответы</string>
    <string name="email">Контактный e-mail</string>
    <string name="phone">Контактный телефон</string>
    <string name="birth">BirthDate</string>
    <string name="position">Искомая дожность</string>
    <string name="salary">Ожидаемая зарплата в руб.</string>
    <string name="contact_information">Контактная информация:</string>
    <string name="add_button_info">Добавить ещё одно поле для ввода данных</string>
    
    <!--то что ниже для Employer-->
    <string name="two">Активити два</string>
    <string name="sendButtonAnswer">Отправить ответ</string>
    <string name="phoneNumberActivity2">Телефон:</string>
    <string name="FIOActivity2">Соискатель:</string>
    <string name="sendButtonAnswerActivity2">Отправить ответ</string>
    <string name="titleActivity2">Резюме соискателя</string>
    <string name="birthdayActivity2">Дата рождения:</string>
    <string name="sexActivity2">Пол:</string>
    <string name="positionActivity2">Должность:</string>
    <string name="payActivity2">Зарплата:</string>
    <string name="emailActivity2">Эл. почта:</string>
    <string name="answerActivity2">Написать письмо соискателю</string>
    <string name="hintForEdAnswerActivity2">Введите текст письма</string>
    <string name="sendButtonResumeActivity1">Отправить резюме</string>
    <string name="answerText">Ответ работодателя</string>
    <string-array name="SexValues">
        <item >Мужской</item>
        <item >Женский</item>
    </string-array>
    <string name="clear">Очистить поля</string>

</resources>