<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelloScreen"
    android:layout_margin="10dp" >

    <TextView
        android:id="@+id/hello_screen_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hello_screen_topic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hello_screen_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_screen_desc" />

    <Button
        android:id="@+id/btCandidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/candidate" />

    <Button
        android:id="@+id/btEmployer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/employer" />

</LinearLayout>