<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/resume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:baselineAligned="false"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical" >

                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/name"
                                android:inputType="textPersonName|textCapWords" >

                                <requestFocus android:layout_width="wrap_content" />

                            </EditText>

                            <EditText
                                android:id="@+id/surname"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/surname"
                                android:inputType="textPersonName|textCapWords" />
                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="TODO" >

                            <ImageView
                                android:id="@+id/ivPhoto"
                                android:layout_width="100dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/face_activity2" />
                        </FrameLayout>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/patronymic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/patronymic"
                        android:inputType="textPersonName|textCapWords" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/birth"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:clickable="true"
                            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:hint="@string/birth"
                            android:onClick="onClickDialog" />

                        <Spinner
                            android:id="@+id/spSexValue"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:entries="@array/SexValues" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@android:drawable/ic_menu_send"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textWebEmailAddress" />

                        <ImageView
                            android:id="@+id/addEmailButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/add_button_info"
                            android:onClick="plusButton"
                            android:src="@drawable/add" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@android:drawable/ic_menu_call"
                            android:ems="10"
                            android:hint="@string/phone"
                            android:inputType="phone|numberDecimal" />

                        <ImageView
                            android:id="@+id/addPhoneButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/add_button_info"
                            android:src="@drawable/add" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@android:drawable/ic_menu_search"
                        android:ems="10"
                        android:hint="@string/position"
                        android:inputType="textCapWords" />

                    <EditText
                        android:id="@+id/salary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@android:drawable/ic_menu_help"
                        android:ems="10"
                        android:freezesText="true"
                        android:hint="@string/salary"
                        android:inputType="numberDecimal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/bClearFields"
                            android:layout_width="wrap_content"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="onClick"
                            android:text="@string/clear" />

                        <Button
                            android:id="@+id/bSendAnswerActivity2"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:onClick="onClick"
                            android:text="@string/sendButtonResumeActivity1" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ListView
                        android:id="@+id/answersList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >
                    </ListView>

                    <EditText
                        android:id="@+id/essay"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/essay" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>