<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Light"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eaeaea"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <!--
    цвет светло серый у фона   красный , зеленый , синий     яркость 144  оттенок 160, контраст: 0
    android:background="@android:color/darker_gray"
    android:background="@android:color/background_light"
    -->


    <!--
    TODO СНАЧАЛА ВЫЧИСЛЯЕМ ПО ПИКСЕЛЯМ МАКЕТА КАКИЕ ДОЛЖНЫ БЫТЬ ШРИФТЫ В SP, КАКИЕ ОТСТУПЫ В DP
    TODO
    TODO
    TODO
    TODO
    -->

    <TextView
        android:id="@+id/tvTitleActivity2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:text="@string/titleActivity2"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvFIOActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:text="@string/FIOActivity2"
            android:textColor="#666666"
            android:textSize="16sp" />
        <!--
         цвет   красный 153, зеленый 153, синий 153    яркость 144  оттенок 160, контраст: 0
         android:linksClickable="true" android:autoLink="phone"   android:clickable="true" - может это позволяет кликать?
          android:layout_marginBottom="10dp"
        -->

        <TextView
            android:id="@+id/tvFIOValueActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvBirthdayActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:text="@string/birthdayActivity2"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBirthdayValueActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/birthdayActivity2"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linLayoutInRel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvSexActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/sexActivity2"
                android:textColor="#666666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSexValueActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/sexActivity2"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLayoutInRel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/linLayoutInRel"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPositionActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/positionActivity2"
                android:textColor="#666666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPositionValueActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/positionActivity2"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/linLayoutInRel2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPayActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/payActivity2"
                android:textColor="#666666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPayValueActivity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/payActivity2"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivLittleFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onClickImage"
            android:paddingRight="13dp"
            android:src="@drawable/face_activity2" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvPhoneNumberActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:text="@string/phoneNumberActivity2"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPhoneNumberValueActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:onClick="onClickPhone"
            android:text="@string/phoneNumberActivity2"
            android:textColor="#339999"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvEmailActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/emailActivity2"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmailValueActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="onClickEmail"
            android:text="@string/emailActivity2"
            android:textColor="#339999"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAnswerActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/answerActivity2"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/bSendAnswerActivity2"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="#c9c9c9"
            android:drawableLeft="@drawable/aeroplan_activity2"
            android:onClick="onClickbSendAnswer"
            android:paddingBottom="5dp"
            android:paddingLeft="6dp"
            android:paddingRight="41dp"
            android:paddingTop="5dp"
            android:text="@string/sendButtonAnswerActivity2"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
        <!--  -->

        <EditText
            android:id="@+id/edAnswerActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bSendAnswerActivity2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:background="#dddddd"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hintForEdAnswerActivity2"
            android:inputType="textLongMessage"
            android:textColor="@android:color/black" />

        <requestFocus />
    </RelativeLayout>

</LinearLayout>